--- a/source/CustomControls/SliderEx.xaml
+++ b/source/CustomControls/SliderEx.xaml
@@ -17,8 +17,8 @@
 
     <Style TargetType="{x:Type SliderEx}" BasedOn="{StaticResource {x:Type Slider}}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Background" Value="{DynamicResource ButtonBackgroundBrush}" />
-        <Setter Property="BorderBrush" Value="{DynamicResource NormalBorderBrush}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Slider}">
@@ -32,7 +32,7 @@
                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"  Fill="{DynamicResource GlyphBrush}" />
                         <Border x:Name="Border" Grid.Row="1" Margin="0" Height="6" CornerRadius="{DynamicResource ControlCornerRadius}"
                                 Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{DynamicResource ControlBorderThickness}" />
+                                BorderThickness="1" />
                         <Border Grid.Row="1" Margin="1" Height="4" VerticalAlignment="Center" HorizontalAlignment="Left"
                                 Background="{DynamicResource GlyphBrush}" CornerRadius="{DynamicResource SliderFillCornerRadius}"
                                 Width="{Binding ActualWidth, ElementName=ButtonDecrease}" />
