--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -265,11 +265,8 @@
 
     <SolidColorBrush x:Key="GroupCountBackgroundBrush" Color="#41464F" />
     
-    <LinearGradientBrush x:Key="GridItemBackgroundBrush" StartPoint="0.0, 0.0" EndPoint="1.0, 0.0" >
-        <GradientStop Color="#049BC3" Offset="0"/>
-        <GradientStop Color="#217BBB" Offset="0.5"/>
-        <GradientStop Color="#2E52B5" Offset="1"/>
-    </LinearGradientBrush>
+	<SolidColorBrush x:Key="GridItemBackgroundBrush" Color="{DynamicResource GridItemBackgroundColor}" />
+	<SolidColorBrush x:Key="GridItemSelectedBackgroundBrush" Color="{DynamicResource GlyphColor}" />
     <SolidColorBrush x:Key="PanelSeparatorBrush" Color="{DynamicResource PanelSeparatorColor}" />
     <SolidColorBrush x:Key="WindowPanelSeparatorBrush" Color="{DynamicResource WindowPanelSeparatorColor}" />
     <SolidColorBrush x:Key="CheckBoxCheckMarkBkBrush" Color="{DynamicResource MainColorDark}" />
