--- a/source/DerivedStyles/GridViewItemTemplate.xaml
+++ b/source/DerivedStyles/GridViewItemTemplate.xaml
@@ -31,7 +31,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type GameListItem}">
-                    <Border BorderThickness="{Settings GridItemMargin}" BorderBrush="{DynamicResource GridItemBackgroundBrush}"
+                    <Border x:Name="GridItemBorder" BorderThickness="{Settings GridItemMargin}" BorderBrush="{DynamicResource GridItemBackgroundBrush}"
                                 Background="Transparent">
                         <StackPanel Name="PART_PanelHost" Width="{Settings GridItemWidth}"
                                     d:DataContext="{x:Static DesignMainViewModel.DesignSelectedGameIntance}">
@@ -210,8 +210,12 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="BorderBrush" Value="{DynamicResource GridItemSelectedBackgroundBrush}" TargetName="GridItemBorder"/>
                             <Setter Property="Visibility" Value="Visible" TargetName="GameControls"/>
                         </Trigger>
+	                    <DataTrigger Binding="{Binding IsSelected, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}}" Value="True">
+                            <Setter Property="BorderBrush" Value="{DynamicResource GridItemSelectedBackgroundBrush}" TargetName="GridItemBorder"/>
+	                    </DataTrigger>
                         <MultiDataTrigger>
                             <MultiDataTrigger.Conditions>
                                 <Condition Binding="{Binding ElementName=EnableHighlightAnimation, Path=Tag}" Value="True" />
